--- a/Kafka-Producer-Wikimedia/src/main/resources/application.properties
+++ b/Kafka-Producer-Wikimedia/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=SpringbootProducerApplication
+
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.topic.name=wikimedia_recentchange
+
+wikimedia.api.url=https://stream.wikimedia.org/v2/stream/recentchange
